--- a/server/templates/answer.html
+++ b/server/templates/answer.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewpoint" content="width=device.width, initial-scale=1.0">
     <title>[TITLE]</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <!--fav-icon-->
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../css/newsletter.css" />
 </head>
 
 <body>
@@ -15,17 +15,13 @@
         <!--navigation {{{-->
         <nav>
             <!--logo-->
-            <a href="../../index.html" class="logo">
+            <a href="../" class="logo">
                 <p>Home</p>
             </a>
-            <input class="menu-btn" type="checkbox" id="menu-btn" />
-            <label class="menu-icon" for="menu-btn">
-                <span class="nav-icon"></span>
-            </label>
             <!--menu-->
             <ul class="menu">
-                <li><a href="../index.html">Projects</a></li>
-                <li><a href="../../blog/index.html" class="blog">Blog</a></li>
+                <li><a href="../projects/">Projects</a></li>
+                <li><a href="../blog/" class="blog">Blog</a></li>
             </ul>
         </nav>
         <!--}}}-->
@@ -35,6 +31,7 @@
             <div class="content">
                 <form class="newsletter" action="./newsletter.py">
                     <div class="title"><h1>[TITLE]</h1></div>
+
                     <label for="name">🏷️ Name</label><br>
                     <textarea type="text" id="name" name="name" wrap="soft"></textarea><br>
 
@@ -48,12 +45,14 @@
 
                     <label for="image">📸 Photo Wall</label><br>
                     <label class="file-upload">
-                        <input type="file" id="image" name="image">
-                            <div>Upload image</div>
-                            <p id="filename"></p>
+                        <input type="file" id="image" name="image" accept=".jpg,.jpeg,.png,.gif"/>
+                        <div>Upload image</div>
+                        <p id="filename"></p>
                     </label>
                     <textarea type="text" id="caption" name="caption" placeholder="✍️ Caption" wrap="soft"></textarea><br>
 
+                    <!--Keep the already passed code-->
+                    <input style="display: none;" name="unlock" value="[PASSCODE]"/>
                     <input type="submit" value="Submit"/>
                 </form>
             </div>
