--- a/server/templates/answer.html
+++ b/server/templates/answer.html
@@ -52,7 +52,7 @@
                     <textarea type="text" id="caption" name="caption" placeholder="✍️ Caption" wrap="soft"></textarea><br>
 
                     <!--Keep the already passed code-->
-                    <input style="display: none;" name="unlock" value="[PASSCODE]"/>
+                    <input style="display: none;" type="password" name="unlock" value="[PASSCODE]"/>
                     <input type="submit" value="Submit"/>
                 </form>
             </div>
