--- a/server/templates/question.html
+++ b/server/templates/question.html
@@ -38,7 +38,7 @@
                     <textarea type="text" id="question" name="question" wrap="soft"></textarea><br>
 
                     <!--Keep the already passed code-->
-                    <input style="display: none;" name="unlock" value="[PASSCODE]"/>
+                    <input style="display: none;" type="password" name="unlock" value="[PASSCODE]"/>
                     <input type="submit" value="Submit"/>
                 </form>
             </div>
