Dynamically generate questions

--- a/templates/question_box.html
+++ b/templates/question_box.html
@@ -1,2 +1,2 @@
-<label for="[ID]"><font>[NAME]</font>[QUESTION]</label><br>
+<label for="[ID]">🗳️ <font>[NAME]</font><br>[QUESTION]</label><br>
 <textarea type="text" id="[ID]" name="[ID]" wrap="soft"></textarea><br>
