--- a/templates/answer.html
+++ b/templates/answer.html
@@ -29,7 +29,7 @@
         <!--form {{{ -->
         <div class="container">
             <div class="content">
-                <form class="newsletter" action="./newsletter.py">
+                <form class="newsletter" action="./newsletter.py" method="post">
                     <div class="title"><h1>[TITLE]</h1></div>
 
                     <label for="name">🏷️ Name</label><br>
