Show other submitted questions

--- a/templates/question_form.html
+++ b/templates/question_form.html
@@ -44,6 +44,8 @@
                     <!--Keep the already passed code-->
                     <input style="display: none;" type="password" name="unlock" value="[PASSCODE]" />
                     <input type="submit" value="Submit" />
+
+                    [SUBMITTED]
                 </form>
             </div>
         </div>
