--- a/templates/image_question.html
+++ b/templates/image_question.html
@@ -2,7 +2,7 @@
 <div class="file-upload-container">
     <label class="file-upload">
         <input type="file" id="[IMG_ID]" name="[IMG_ID]" accept=".jpg,.jpeg,.png,.gif" onchange="
-                document.getElementById('filename').innerHTML = document.getElementById('image').value.split('\\')[2];
+                document.getElementById('filename').innerHTML = document.getElementById('[IMG_ID]').value.split('\\')[2];
                 document.getElementById('remove-file').style.display = 'unset'
         ">
         <div>Upload image</div>
@@ -10,14 +10,8 @@
     </label>
     <div class="button" id="remove-file" style="display: none;" onclick="
         document.getElementById('filename').innerHTML = '';
-        document.getElementById('image').value = '';
+        document.getElementById('[IMG_ID]').value = '';
         document.getElementById('remove-file').style.display = 'none'
     ">X</div>
 </div>
-
-<label class="file-upload">
-    <input id="[IMG_ID]" type="file" name="[IMG_ID]" accept=".jpg,.jpeg,.png,.gif">
-    <div>Upload image</div>
-    <p id="filename"></p>
-</label>
 <textarea id="caption" type="text" name="[ID]" placeholder="✍️ Caption" wrap="soft"></textarea><br>
