--- a/templates/question_form.html
+++ b/templates/question_form.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width=device.width, initial-scale=1.0">
-    <title>[TITLE]</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../css/newsletter.css" />
-</head>
+[HEADER]
 
 <body>
     <section class="main">
