Separate navigation bar from templates

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -5,19 +5,7 @@
 
 <body>
     <section class="main">
-        <!--navigation {{{-->
-        <nav>
-            <!--logo-->
-            <a href="../" class="logo">
-                <p>Home</p>
-            </a>
-            <!--menu-->
-            <ul class="menu">
-                <li><a href="../projects/">Projects</a></li>
-                <li><a href="../blog/" class="blog">Blog</a></li>
-            </ul>
-        </nav>
-        <!--}}}-->
+        [NAVBAR]
 
         <div class="container">
             <div class="content">
