--- a/templates/question.html
+++ b/templates/question.html
@@ -5,21 +5,8 @@
 
 <body>
     <section class="main">
-        <!--navigation {{{-->
-        <nav>
-            <!--logo-->
-            <a href="../" class="logo">
-                <p>Home</p>
-            </a>
-            <!--menu-->
-            <ul class="menu">
-                <li><a href="../projects/">Projects</a></li>
-                <li><a href="../blog/" class="blog">Blog</a></li>
-            </ul>
-        </nav>
-        <!--}}}-->
+        [NAVBAR]
 
-        <!--form {{{ -->
         <div class="container">
             <div class="content">
                 <form class="newsletter" action="./newsletter.py" method="post">
@@ -34,7 +21,6 @@
                 </form>
             </div>
         </div>
-        <!--}}}-->
     </section>
 </body>
 
