--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,11 @@
     <a href="../" class="logo">
         <p>Home</p>
     </a>
+    <div class="newsletter-nav">
+        <a href="./newsletter.py?issue=[PREV]" class="[P_VALID]">Prev</a>
+        <a href="./newsletter.py">Curr</a>
+        <a href="./newsletter.py?issue=[NEXT]" class="[N_VALID]">Next</a>
+    </div>
     <ul class="menu">
         <li><a href="../projects/">Projects</a></li>
         <li><a href="../blog/" class="blog">Blog</a></li>
