Disable current nav when appropriate

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
     </a>
     <div class="newsletter-nav">
         <a href="./newsletter.py?issue=[PREV]" class="[P_VALID]">Prev</a>
-        <a href="./newsletter.py">Curr</a>
+        <a href="./newsletter.py" class="[C_VALID]">Curr</a>
         <a href="./newsletter.py?issue=[NEXT]" class="[N_VALID]">Next</a>
     </div>
     <ul class="menu">
