Implement history navigation (#16)
* Separate header from template files

* Separate navigation bar from templates

* Fix rendered newsletter titling

* Implement newsletter navigation menu

* Fix invalid and valid issue numbers

* Disable current nav when appropriate

* Improve disabled colour

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width=device.width, initial-scale=1.0">
-    <title>[TITLE]</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../css/newsletter.css" />
-</head>
+[HEADER]
 
 <body>
     <section class="main">
-        <!--navigation {{{-->
-        <nav>
-            <!--logo-->
-            <a href="../" class="logo">
-                <p>Home</p>
-            </a>
-            <!--menu-->
-            <ul class="menu">
-                <li><a href="../projects/">Projects</a></li>
-                <li><a href="../blog/" class="blog">Blog</a></li>
-            </ul>
-        </nav>
-        <!--}}}-->
+        [NAVBAR]
 
-        <!--form {{{ -->
         <div class="container">
             <div class="content">
                 <form
@@ -46,7 +26,6 @@
                 </form>
             </div>
         </div>
-        <!--}}}-->
     </section>
 </body>
 
