--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width=device.width, initial-scale=1.0">
-    <title>[TITLE]</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../css/newsletter.css?v=2" />
-</head>
+[HEADER]
 
 <body>
     <section class="main">
-        <!--navigation {{{-->
-        <nav>
-            <!--logo-->
-            <a href="../" class="logo">
-                <p>Home</p>
-            </a>
-            <!--menu-->
-            <ul class="menu">
-                <li><a href="../projects/">Projects</a></li>
-                <li><a href="../blog/" class="blog">Blog</a></li>
-            </ul>
-        </nav>
-        <!--}}}-->
+        [NAVBAR]
 
         <div class="container">
             <div class="content">
